--- a/Booking.API/appsettings.Development.json
+++ b/Booking.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "csBooking": "Server=YOSEPH;Database=CQRS_Booking_Firstlin;TrustServerCertificate=True;User Id=Firstlin;Password=abcd@1234"
   }
 }
