--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,12 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Repositories\Apartment\" />
+    <Folder Include="Repositories\Catalog\" />
+    <Folder Include="Repositories\Hotel\" />
     <Folder Include="Services\Apartment\" />
-    <Folder Include="Services\Catalog\GuestType\Command\Add\" />
     <Folder Include="Services\Catalog\GuestType\Command\Delete\" />
     <Folder Include="Services\Catalog\GuestType\Command\Update\" />
     <Folder Include="Services\Catalog\GuestType\Queries\" />
@@ -27,6 +25,10 @@
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
