--- a/Booking.API/appsettings.json
+++ b/Booking.API/appsettings.json
@@ -11,6 +11,8 @@
         "Args": {
           "path": "logs/log-.txt",
           "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter",
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
       }
