--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -10,4 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
 </Project>
